fix ff layout issue

--- a/css/include/layout.styl
+++ b/css/include/layout.styl
@@ -23,7 +23,7 @@ section
 
 
 .download-guides
-  width 260px
+  width 259px
   margin 20px 0 0 20px
 
   li
